added images and custom icon, aka made it look pretty

--- a/Java1/Wk3/WeatherApp/res/values/strings.xml
+++ b/Java1/Wk3/WeatherApp/res/values/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">Weather App</string>
@@ -8,6 +8,5 @@
     <string name="location">Location: </string>
     <string name="temp">Tempurature: </string>
     <string name="condition">Condition: </string>
-    <string name="status_picture">status_picture</string>
 
 </resources>
