--- a/Java1/Wk3/ForcastApp/res/values/strings.xml
+++ b/Java1/Wk3/ForcastApp/res/values/strings.xml
@@ -5,11 +5,11 @@
     <string name="action_settings">Settings</string>
     <string name="hint_text">Enter zip code</string>
     <string name="button_text">Go</string>
-    <string name="low_temp_label">Low</string>
-    <string name="high_temp_label">High</string>
-    <string name="condition_label">Current Condition</string>
+    <string name="temp_label">Temp:</string>
+    <string name="location_label">Location:</string>
+    <string name="condition_label">Current Condition:</string>
     <string name="date_label">Date</string>
-    <string name="day_label">Day</string>
+    <string name="day_label">Date:</string>
 
 
 </resources>
