Working on getting the new connection error to work

--- a/Java1/Wk3/ForcastApp/res/values/strings.xml
+++ b/Java1/Wk3/ForcastApp/res/values/strings.xml
@@ -3,13 +3,12 @@
 
     <string name="app_name">The Forecast App</string>
     <string name="action_settings">Settings</string>
-    <string name="hint_text">Enter zip code</string>
-    <string name="button_text">Go</string>
-    <string name="temp_label">Temp:</string>
-    <string name="location_label">Location:</string>
-    <string name="condition_label">Current Condition:</string>
-    <string name="date_label">Date</string>
-    <string name="day_label">Date:</string>
+    <string name="zip_code">Enter Zip Code</string>
+    <string name="go">GO</string>
+    <string name="location">Location: </string>
+    <string name="temp">Tempurature: </string>
+    <string name="condition">Condition: </string>
+    <string name="status_picture">status_picture</string>
 
 
 </resources>
